# shop_telegram

./: .gitignore  Makefile  payment_config.json  pyproject.toml  shop.db
shop/scripts/: bot.py  config.py  loader.py  photo_loader.py  states.py  utils.py
shop/scripts/database/: catalog_base.py  db.py  user_base.py
shop/scripts/handlers/: __init__.py  addadmin.py  admin_payment.py  catalog.py  profile.py  start.py
shop/scripts/utils/: __init__.py  crypto.py  load_photo.py  payment_config.py
