[project]
name = "shop-telegram"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "pytelegrambotapi>=4.27.0",
    "requests>=2.32.4",
]

[project.scripts]
start-bot = "shop.scripts.bot:main"
load-photo = "shop.scripts.load_photo:main"
